--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button type="submit">Add Message</button>
     </form>
     <div id="messageList"></div>
+    <div id="errorContainer"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
     <script src="app.js"></script>
